text alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,14 @@
 p, .introtext, .contact
 {
     font-family: 'Raleway', sans-serif;
-    line-height: 1.9em;
-    max-width: 500px;
+    line-height: 2em;
+    max-width: 400px;
     margin: auto;
-    min-width: 50px;
+    font-kerning: 10em;
     text-align: center;
+    
     font-size: .8em;
+  
     
     }
 
@@ -17,6 +19,10 @@ p, .introtext, .contact
     list-style-type: none;
     color: white;
     font-weight: 600;
+  
+   text-align: center;
+    min-width: 50px;
+    line-height: 2.5em;
     
     
 }
@@ -28,11 +34,11 @@ p, .introtext, .contact
 
 .blocktext {
     color: white;
-    font-kerning: 2em;
+    font-kerning: 4em;
     margin-bottom: 4em;
-    
-    
 }
+
+
 
 
 
@@ -82,7 +88,7 @@ a:link, a:visited, a:active {
 nav a:hover {
     text-decoration: underline;}
 
-/*---------------- BACKGROUND IMAGES-----------------*/
+/*---------------- IMAGES-----------------*/
 
 img {
     display: block; 
@@ -101,18 +107,26 @@ margin-bottom: 2em;}
 .ccc {
      display: block; 
     max-width: 100%;
-    padding top: 50em;}
+    margin-top:  3em;
+margin-bottom: 3em}
 
 .intro {
     background-color: #00ffbb;
 }
 
 .about {background-color: #00ffbb;
-height: 500px;
-    padding-top: 3em;}
+height: 375px;
+    padding-top: 3em;
+padding-bottom: 3em;}
 
-#landing-page {
+.hellologo {margin-bottom: 3em;
+margin-top: 1em;}
 
+.brandbuild
+{margin-top: 3em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+    
 }
 
 
@@ -127,11 +141,10 @@ height: 500px;
      min-width: 200px;
      background-position: center; 
      background-size: 100%;
-     height: 1150px;
+     height: 450px;
 }
 
-
-
+#intro {height: 500px;}
 
 
 
